  * NB: Setting 'default_selection "+"' remains equivalent to commenting that token out
  *     This default setting will continue to function as before
- Improves NVRAM Management
  * NVRAM Entries (Emulated and Hardware) are fully cleared before new entries are made
- Extends Memory Management Fixes
  * Additional memory management improvements


0.13.2.AG (03 Aug 2021):
-----------------------
- Adds 'TagHelp' Feature
  * Ensures HiddenTags can always be unhidden
  * This feature is active by default but can be disabled with the "disable_tag_help" token
- Fixes Banner Flicker During Load Sequence
  * Rationalises freeing the screen background image to reduce flickering at load time
  * Provides improved UX
- Fixes Filtering of Windows Secure Boot Certificates on Apple Firmware
  * Reverts Extension to Legacy Windows
  * This appeared to be linked to negative impacts on some Macs
- Fixes 'IgnoreVolumeICNS' and 'HideUI Badges' Implementation
  * Now extended to cover other volume types apart from 'internal' volumes
- Fixes Handling of "FirmwareBootNum" Entries
  * These were not loaded as expected
- Fixes Hangs Resulting from Changed Device Handles
  * RefindPlus hung on return from third party tools that change device handles, such as GDisk
  * RefindPlus now manages this situation
- Fixes Invalid 'Command Line Option Error' Notice on UEFI PC
  * Some UEFI PC appear to spontaneously generate invalid load options
  * These result in a halt and require one or more key presses to proceed
  * This bug was introduced in v0.12.0.AQ (Commit f5c438f)
- Fixes Booting into Legacy (BIOS) OS on UEFI PC
  * This bug was introduced in v0.13.2.AE (Commit b80f508)
- Fixes Hang When Selecting SubScreen Options
  * This bug was introduced in v0.13.2.AF (Commit 57280c3)
- Improves Volume Scanning Implementation
  * Improves speed generally by cutting self volume identification short once identified
  * Fixes Specific Implementation on UEFI PC
- Improves Tool Path Definitions