@@ -144,7 +144,7 @@ REFIT_CONFIG GlobalConfig = {
     /* DisableAMFI = */ FALSE,
     /* SupplyAPFS = */ FALSE,
     /* SilenceAPFS = */ FALSE,
-    /* SyncAPFS = */ FALSE,
+    /* SyncAPFS = */ TRUE,
     /* ProtectNVRAM = */ FALSE,
     /* ScanOtherESP = */ FALSE,
     /* DisableTagHelp = */ FALSE,
