@@ -28,6 +28,9 @@
   * NVRAM Entries (Emulated and Hardware) are fully cleared before new entries are made
 - Extends Memory Management Fixes
   * Additional memory management improvements
+- Amends 'SyncAPFS' Implementation
+  * This feature is now activated by default and has been removed from the configuration file
+  * Users can however deactivate it via the new 'ignore_help_apfs' configuration token
 
 
 0.13.2.AG (03 Aug 2021):
